# pigx

./: .gitignore  .gitmodules  BS_Selfconsist_check_deconv.R  BSseq_deconv.R  BSseq_deconv_funcs.R  BSseq_pipeline.py  CODE-OF-CONDUCT  CONTRIBUTING  CONTRIBUTING.org  Check_Config.py  Config_scRNA.yaml  FDamm_RunSnake.sh  META.in  Makefile.am  Makefile.in  NEWS  NEWS.txt  PIGx_BS.input  PIGx_BS.sh  README.md  SnakeFunctions.py  Snake_ChIPseq.py  Snake_Dropseq.py  Snake_Function.py  Snakefile  Snakefile_test.py  TODO  aclocal.m4  cluster_conf.json  config.json  config.yaml  config_Bren.json  configure.ac  deconv_prep.R  dev_session.vim  env.scm  environment.linux.yml  environment.yml  func_defs.py  guix.scm  (+28 more)
pipelines/rnaseq/: .gitignore  CONTRIBUTING  META.in  Makefile.am  README.md  configure.ac  guix.scm  pigx_rnaseq.py  qsub-template.sh.in  requirements.txt  test.sh.in
pipelines/rnaseq/etc/: pretty.txt  settings.yaml.in
pipelines/rnaseq/scripts/: collate_read_counts.R  count_reads.R  counts_matrix_from_SALMON.R  counts_matrix_from_STAR.R  deseqReport.Rmd  deseqReport.Rmd.in  runDeseqReport.R  translate_sample_sheet_for_report.R  validate_input.py  validate_input_annotation.R
pipelines/rnaseq/tests/: settings.yaml  settings_no_de.yaml
pipelines/rnaseq/tests/sample_data/preprocessed/: colData.tsv
pipelines/rnaseq/tests/sample_data/preprocessed/feature_counts/normalized/hisat2/: deseq_size_factors.txt
pipelines/rnaseq/tests/sample_data/preprocessed/feature_counts/normalized/salmon/: TPM_counts_from_SALMON.genes.tsv  TPM_counts_from_SALMON.transcripts.tsv
pipelines/rnaseq/tests/sample_data/preprocessed/feature_counts/raw_counts/salmon/: counts_from_SALMON.transcripts.tsv
pipelines/rnaseq/tests/sample_data/preprocessed/mapped_reads/: HBR_Rep1_Aligned.toTranscriptome.out.bam  HBR_Rep1_Log.final.out  HBR_Rep2_Aligned.toTranscriptome.out.bam  HBR_Rep2_Log.final.out  HBR_Rep2_SJ.out.tab  HBR_Rep3_Log.final.out  HBR_Rep3_ReadsPerGene.out.tab  UHR_Rep1_Aligned.toTranscriptome.out.bam  UHR_Rep1_ReadsPerGene.out.tab  UHR_Rep1_SJ.out.tab  UHR_Rep2_Aligned.toTranscriptome.out.bam  UHR_Rep2_Log.out  UHR_Rep2_ReadsPerGene.out.tab  UHR_Rep3_Aligned.sortedByCoord.out.bam  UHR_Rep3_ReadsPerGene.out.tab  UHR_Rep3_SJ.out.tab
pipelines/rnaseq/tests/sample_data/preprocessed/mapped_reads/hisat2/: HBR_Rep1_Aligned.sortedByCoord.out.bam  HBR_Rep1_Aligned.sortedByCoord.out.bam.bai  HBR_Rep2_Aligned.sortedByCoord.out.bam  HBR_Rep3_Aligned.sortedByCoord.out.bam  HBR_Rep3_Aligned.sortedByCoord.out.bam.bai  UHR_Rep1.read_counts.csv  UHR_Rep1_Aligned.sortedByCoord.out.bam.bai  UHR_Rep2.read_counts.csv  UHR_Rep2_Aligned.sortedByCoord.out.bam  UHR_Rep3_Aligned.sortedByCoord.out.bam  UHR_Rep3_Aligned.sortedByCoord.out.bam.bai
pipelines/rnaseq/tests/sample_data/preprocessed/preprocessed_data/: counts_from_STAR.tsv
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/: counts_from_SALMON.tsv
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep1/: cmd_info.json  lib_format_counts.json  quant.genes.sf  quant.sf
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep1/aux_info/: ambig_info.tsv  meta_info.json
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep2/: cmd_info.json  lib_format_counts.json  quant.sf
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep2/libParams/: flenDist.txt
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep3/: quant.genes.sf  quant.sf
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/HBR_Rep3/aux_info/: meta_info.json
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/UHR_Rep1/: cmd_info.json  quant.genes.sf  quant.sf
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/UHR_Rep2/: cmd_info.json  lib_format_counts.json  quant.genes.sf
pipelines/rnaseq/tests/sample_data/preprocessed/salmon_output/UHR_Rep3/: cmd_info.json  quant.genes.sf
pipelines/rnaseq/tests/sample_data/preprocessed/trimmed_reads/: HBR_Rep1.read2.fastq.gz_trimming_report.txt  HBR_Rep2.read1.fastq.gz_trimming_report.txt  HBR_Rep3.read1.fastq.gz_trimming_report.txt  UHR_Rep1.read1.fastq.gz_trimming_report.txt  UHR_Rep1.read2.fastq.gz_trimming_report.txt  UHR_Rep2.read1.fastq.gz_trimming_report.txt  UHR_Rep2.read2.fastq.gz_trimming_report.txt  UHR_Rep3.read2.fastq.gz_trimming_report.txt
pipelines/rnaseq/tests/test_deseq_reports/: test.sh.in
pipelines/rnaseq/tests/test_fastqc/: test.sh.in
pipelines/rnaseq/tests/test_hisat2/: test.sh.in
pipelines/rnaseq/tests/test_multiqc/: test.sh.in
pipelines/rnaseq/tests/test_salmon/: test_salmon_index.sh.in
pipelines/rnaseq/tests/test_salmon_counts/: test.sh.in
pipelines/rnaseq/tests/test_star/: test.sh.in
pipelines/rnaseq/tests/test_star_counts/: test.sh.in
pipelines/rnaseq/tests/test_trim_galore/: test.sh.in
pipelines/sars-cov-2/: .gitmodules  META.in  Makefile.am  configure.ac  manifest.scm  snakefile.py
pipelines/sars-cov-2/etc/: settings.yaml.in
pipelines/sars-cov-2/m4/: ax_r_package.m4
pipelines/sars-cov-2/scripts/: creating_mutation_summary_table.R  deconvolution.R  download_databases.sh.in  get_qc_table.py  overview_QC_table.R  renderReport.R  sample_coverage_score.R  vcfTocsv.py  vep_rule.py
pipelines/sars-cov-2/scripts/Sample_prep_scripts/: Renaming_by_table.py  getting_coverage_overview.py  overview_Kraken2_table.R  samplesheet_from_filelist.py  sigmuts_on_amplicons.rmd
pipelines/sars-cov-2/scripts/report_scripts/: qc_report_per_sample.Rmd
pipelines/sars-cov-2/tests/: coverage_gathering.csv  coverage_gathering_noprimertrimming.csv
pipelines/sars-cov-2/tests/coverage/: Test_coverage.csv  report_download_coverage.csv
pipelines/sars-cov-2/tests/sample_data/: test_mut_timecourse.csv  test_sig_mutations.df
pipelines/sars-cov-2/tests/sample_data/signature_mutations/: B117_outbreakinfo_mutation_report_data_2021-03-06.tsv  B1427_outbreakinfo_mutation_report_data_2021-03-06.tsv  B1526_outbreakinfo_mutation_report_data_2021-03-06.tsv
pipelines/sars-cov-2/tests/tests/: vep.sh.in
(+679 files in other folders)
